      headings inside a page or class.
    * Class pages no longer show the namespace and no longer have file info
      pages.
    * Quicksearch box in Class/Module Index in the sidebar is always shown.
    * HTML output is now using HTML 5.
  * RDoc supports additional documentation types:
    * TomDoc 1.0.0-pre
    * RD format

    The format of documentation in a particular file can be specified by the
    +:markup:+ directive.  If the :markup: directive is in the first comment
    it is used as the default for the entire file.  For other comments it
    overrides the default markup format.

* Minor enhancements
  * HTML headings now have ids matching their titles.

      = Hello!

    Is rendered as

      <h1 id="label-Hello%21">Hello!</h1>

  * Labels for classes or methods can be linked-to by adding an <tt>@</tt>
    following the class or method reference.  For example,
    <tt>RDoc::Markup@Links</tt>

    See RDoc::Markup@Links for further details.
  * RDoc now looks for a <tt>format: parser_name</tt> magic comment to choose
    alternate documentation formats.  The format comment must be in the first
    three lines of the file (to allow for a shebang or modeline).
  * Added RDoc::TopLevel#text? and RDoc::Parser::Text to indicate a
    parsed file contains no ruby constructs.
  * Added <tt>rdoc-label</tt> link scheme which allows bidirectional links.
    See RDoc::Markup for details.
  * Image paths at HTTPS URLs will now be turned into +<img>+ tags.  Pull
    Request #60 by James Mead
  * Added RDoc::Comment which encapsulates comment-handling functionality.
  * Added RDoc::Markup::PreProcess::post_process to allow arbitrary comment
    munging.

* Bug fixes
  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
    longer converted.
  * Performance of RDoc::RubyLex has been improved.  Ruby Bug #5202 by Ryan
    Melton.
  * Add US-ASCII magic comments to work with <tt>ruby -Ku</tt>.  Issue #63 by
    Travis D. Warlick, Jr.
